# volumetricspy

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pypi.yml  test.yml
docs/: index.md  release_notes.md
docs/examples/1-Surfaces/: 1-Surfaces.ipynb  1-Surfaces_simple.ipynb  2-SurfaceGroup.ipynb  anticline  lower  upper
docs/examples/2-Montecarlo/: 1-ProbVar.ipynb
docs/examples/3-Points/: ind_krigging.ipynb  iwd.ipynb  krigging.ipynb  points.ipynb  sgs.ipynb  transforms.ipynb  variograms.ipynb
examples/1-Surfaces/1-Surfaces/: index.html
examples/1-Surfaces/1-Surfaces_simple/: index.html
examples/1-Surfaces/2-SurfaceGroup/: index.html
examples/2-Montecarlo/1-ProbVar/: index.html
examples/3-Points/ind_krigging/: index.html
examples/3-Points/iwd/: index.html
examples/3-Points/krigging/: index.html
examples/3-Points/points/: index.html
examples/3-Points/sgs/: index.html
examples/3-Points/transforms/: index.html
examples/3-Points/variograms/: index.html
examples/__init__/: index.html
release_notes/: index.html
volumetricspy/: .volumetrics.py.swp  .volumetricspy.py.swp  __init__.py  montecarlo.py  volumetrics.py
volumetricspy/stats/: __init__.py  grid.py  krigging.py  points.py  sgs.py  transforms.py  variograms.py
volumetricspy/utils/: __init__.py  formulas.py
