[tool.poetry]
name = "volumetricspy"
version = "0.1.10"
description = "Oil & Gas Tool for estimating Original in Place Resources"
authors = ["Santiago Cuervo <scuervo91@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.2"
matplotlib = "^3.4.3"
pyvista = "^0.31.3"
pandas = "^1.3.2"
scipy = "^1.7.1"
geopandas = "^0.10.2"
Shapely = "^1.7.1"
zmapio = "^0.6.0"
scikit-image = "^0.18.2"
pydantic = "^1.8.2"
seaborn = "^0.11.2"
folium = "0.13.0"
mapclassify = "^2.4.3"
plotly = "^5.10.0"

[tool.poetry.dev-dependencies]
notebook = "^6.4.3"
mkdocs-material = "^7.2.4"
ipyvtklink = "^0.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
